--- a/sites/default/themes/realia/scss/_default.scss
+++ b/sites/default/themes/realia/scss/_default.scss
@@ -910,6 +910,7 @@ article.taxonomy-term {
     }
     & > .span8 {
       & > .split-tabs {
+        overflow: hidden !important;
         > h2 {
           margin: 10px 0px 10px 30px;
         }
